[package]
name = "Image-Auto-Uploader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "*"
tokio = { version = "*", features = ["full"] }
reqwest = { version = "*", features = ["json"] }
serde = "*"
serde_json = "*"